# scientific_computing

./: .gitignore  MAT.asv  MAT.m
exercize1/: CMakeLists.txt  MAT.m  top10.txt  zipf_data.txt
exercize1/exe/: testo.txt
exercize1/include/: Zipf.hh
exercize1/src/: Zipf.cpp
exercize2/: CMakeLists.txt  MAT.m  results.csv  results_optimized.csv
exercize2/include/: BVP.hh  BVP_optimized.hh
exercize2/src/: BVP.cpp  BVP_main.cpp  BVP_optimized.cpp  BVP_optimized_main.cpp
final_project/: CMakeLists.txt  eigenvalues.csv  eigenvalues_dual.csv  eigenvectors_dual.csv  figsMAT.m  newton_convergence.csv  results.csv  results_autodiff.csv  summary_autodiff.csv  trajectory.csv
final_project/include/: Newton.hh  VSM.hh  VSM_RK4.hh  VSM_autodiff.hh  VSM_small_signal.hh  dual.hh
final_project/src/: VSM.cpp  VSM_RK4.cpp  VSM_autodiff.cpp  VSM_autodiff_main.cpp  VSM_main.cpp  VSM_small_signal.cpp
